rancher/k8s/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
  containers:
  - name: flask-container
    image: flask-busqueda:latest
    ports:
    - containerPort: 5000
    volumeMounts:
    - name: flask-storage
      mountPath: /app/data  # Asegúrate de que esto coincide con el directorio donde guardas los datos
  volumes:
  - name: flask-storage
    persistentVolumeClaim:
      claimName: flask-pvc  # El PVC creado previamente
